<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evexia+</string>
    <string name="title_directions">Directions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="search_hint">Search Nearby</string>
    <string name="campaign_title">Campaign Example</string>
    <string name="reset_campaigns">Reset Campaigns</string>
    <string name="location_request">Request Location</string>
    <string name="location_on">On</string>
    <string name="location_off">Off</string>
    <string name="manual_report">Report Issue</string>
    <string name="issue_report">Report an issue.</string>
    <string name="query_hint">Find up to ten local items&#8230;</string>
    <string name="search_query_hint">Find ten placemarks&#8230;</string>

    <string name="location_sharing_create_profile">Create a Sample Location Sharing Profile</string>
    <string name="location_sharing_start_updating_location">Start Uploading your Location</string>
    <string name="location_sharing_stop_updating_location">Stop Uploading your Location</string>
    <string name="location_sharing_create_invite">Create Invite</string>
    <string name="location_sharing_retrieve_friends">Retrieve Friends</string>
    <string name="location_sharing_upload_user_image">Upload User Image</string>

    <string name="campaign_start_monitoring">Start Campaign Monitoring</string>
    <string name="campaign_stop_monitoring">Stop Campaign Monitoring</string>
    <string name="campaign_reset_cache">Reset Campaign Cache</string>
    <string name="campaign_reset_single_cache">Reset Single Campaign Cache</string>

    <string name="settings_about">About</string>
    <string name="settings_about_version">SDK Version</string>

    <string name="findmyway">Find My Way</string>
    <string name="profile">Profile</string>
    <string name="finances">Finances</string>
    <string name="emergency">Emergency</string>

    <string name="emergency_check">Are you sure it\'s an emergency?</string>

    <string-array name="section_titles">
        <item>Home</item>
        <item>Maps</item>
        <item>Nearby</item>
        <item>Search</item>
        <item>Markers</item>
        <item>Campaigns</item>
        <item>Scrolling</item>
        <item>Location</item>
        <item>Location Sharing</item>
        <item>Single Marker</item>
        <item>Tags</item>
        <item>Single Tag</item>
        <item>Location Sharing Map</item>
    </string-array>

</resources>
