<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arubanetworks.meridiansamples.MainActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:src="@drawable/evexia" />

        <Button
            android:id="@+id/MyVisit"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="My Visit"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:weightSum="100"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="52">
                <ImageButton
                    android:id="@+id/findMyWay"
                    android:src="@drawable/location"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    android:cropToPadding="true"
                    android:layout_weight="1"
                    android:background="@color/mr_white"/>
                <ImageButton
                    android:id="@+id/myProfile"
                    android:src="@drawable/profile"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    android:cropToPadding="true"
                    android:layout_weight="1"
                    android:background="@color/mr_white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/findmyway"
                    android:textSize="20sp"
                    android:fontFamily="serif"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/profile"
                    android:textSize="20sp"
                    android:fontFamily="serif"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="52">
                <ImageButton
                    android:id="@+id/money"
                    android:src="@drawable/money"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    android:cropToPadding="true"
                    android:layout_weight="1"
                    android:background="@color/mr_white">
                </ImageButton>

                <ImageButton
                    android:id="@+id/emergency"
                    android:src="@drawable/sos"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_width="0sp"
                    android:layout_height="match_parent"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    android:cropToPadding="true"
                    android:layout_weight="1"
                    android:background="@color/mr_white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/finances"
                    android:textSize="20sp"
                    android:fontFamily="serif"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/emergency"
                    android:textSize="20sp"
                    android:fontFamily="serif"
                    android:gravity="center"/>
            </LinearLayout>
            <Button
                android:id="@+id/searchbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/action_search"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="@color/drawer_background"/>

</android.support.v4.widget.DrawerLayout>
